<resources>
    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="description">Description</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="comments">COMMENTS</string>
</resources>
